@@ -38,6 +38,8 @@
 <p>2015-04-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/wpg.c (LoadWPG2Flags): Silence Coverity 10273 and 10253
+&quot;Unused value&quot;.</li>
 <li>magick/montage.c (MontageImages): Silence Coverity 10255 &quot;Unused
 value&quot;.
 (MontageImages): Silence Coverity 10264 &quot;Unused value&quot;.</li>
